<resources>
	<string name="tv_hint_search">搜索商家、店铺</string>
	<string name="tv_title_bar_delete">清空</string>
	<string name="tv_title_bar_inform">通知</string>
	<string name="tv_title_bar_appname">夜夜通</string>
	<string name="ic_category_food">美食</string>
	<string name="ic_category_movie">电影</string>
	<string name="ic_category_car">公交</string>
	<string name="ic_category_new">今日推荐</string>
	<string name="tv_guess_you_like">猜你喜欢</string>
	<string name="app_name">NightFairMobille</string>
	<string name="hello_world">Hello world!</string>
	<string name="action_settings">Settings</string>
	<string name="title">标题</string>
	<string name="title_right">标题右</string>
	<string name="tab_title_index">主页</string>
	<string name="tab_title_nearby">附近</string>
	<string name="tab_title_chat">聊天</string>
	<string name="tab_title_personal">我的</string>
	<string name="text_title_bar_person">个人中心</string>
	<string name="text_title_bar_cancel">取消</string>
	<string name="text_title_bar_login">登录</string>
	<string name="tt_bar_ps_detail">编辑资料</string>
	<string name="text_title_bar_register">注册</string>
	<string name="text_login_forget_password">忘记密码？</string>
	<string name="text_quick_login">快速登录</string>
	<string name="tv_login_register">登录/注册</string>
	<string name="tv_logout">退出登录</string>
	<string name="user_nickname">请输入昵称</string>
	<string name="personal_item_coupon">我的订单</string>
	<string name="personal_item_collectiion">我的收藏</string>
	<string name="personal_item_comment">我的评价</string>
	<string name="personal_item_wallet">我的钱包</string>
	<string name="personal_item_recommend">推荐我们</string>
	<string name="personal_item_feedback">意见反馈</string>
	<string name="personal_item_update">检查更新</string>
	<string name="personal_item_about">关于我们</string>
	<string name="title_activity_login">LoginActivity</string>
	<string name="title_activity_personal__coupon_">Personal_Coupon_Activity</string>
	<string name="title_activity_personal__collecyion_">Personal_Collecyion_Activity</string>
	<string name="tv_hint_login_user">手机号/邮箱/用户名</string>
	<string name="tv_hint_login_password">请输入密码</string>
	<string name="bt_login">登录</string>
	<string name="bt_serach">查询</string>
	<string name="text_auth_login">第三方登录</string>
	<string name="nightfair">夜夜通</string>
	<string name="title_activity_personal_detail_">Personal_detail_Activity</string>
	<string name="text_personaldetail_face">头像</string>
	<string name="text_personaldetail_nickname">昵称</string>
	<string name="text_personaldetail_sex">性别</string>
	<string name="text_personaldetail_age">年龄</string>
	<string name="text_personaldetail_star">星座</string>
	<string name="text_personaldetail_hometown">故乡</string>
	<string name="text_personaldetail_address">所在地</string>
	<string name="text_personaldetail_autograph">个人签名</string>
	<string name="tt_bar_ps_compelte">完成</string>
	<string name="dialog_ok">确认</string>
	<string name="dialog_edit_cancal">放弃</string>
	<string name="dialog_edit_title">是否放弃对资料的修改？</string>
	<string name="dialog_edit_ok">继续编辑</string>
	<string name="dialog_cancal">取消</string>
	<string name="et_ps_detail_nickname_text">请填写的昵称</string>
	<string name="et_ps_detail_sex_hint">男</string>
	<string name="et_ps_detail_age_hint">22</string>
	<string name="text_ps_detail_hometown">请填写你的故乡</string>
	<string name="text_ps_detail_address">请填写你的所在地</string>
	<string name="text_ps_detail_autograph">介绍一下自己吧</string>
	<string name="title_activity_cut_face">CutFaceActivity</string>
	<string name="text_face_use">使用</string>
	<string name="text_loading">正在上传头像</string>
	<string name="choose_title">请选择性别：</string>
	<string name="choose_age_title">选择出生日期，系统将会自动转换为年龄及星座：</string>
	<string name="choose_city_title">请选择地理位置：</string>
	<string name="choose_autograph_title">请输入个人签名，仅可输入127个字符。</string>
	<string name="choose_cantact_title">请输入你的联系方式，方面我们与你沟通</string>
	<string name="choose_man">男</string>
	<string name="choose_women">女</string>
	<string name="choose_sercet">保密</string>
	<string name="text_personal_age">请选择你的年龄</string>
	<string name="text_personal_star">请选择你的星座</string>
	<string name="text_personal_sex">请选择你的性别</string>
	<string name="title_activity_test">TestActivity</string>
	<string name="toast_message">消息提醒</string>
	<string name="dialog_camera">拍照</string>
	<string name="dialog_openPhone">图库</string>
	<string name="title_activity_about">AboutActivity</string>
	<string name="text_about_version">版本V</string>
	<string name="text_about_agreement">用户服务协议</string>
	<string name="text_about_copyrighta">夜夜通项目组</string>
	<string name="text_about_copyrightb">＠2015 NightFair Project Team Co., Ltd</string>
	<string name="actionbar_title">actionbar标题</string>
	<string name="actionbar_title_setting">设置</string>
	<string name="actionbar_title_location">定位</string>
	<string name="actionbar_title_about">关于夜夜通</string>
	<string name="actionbar_title_facebook">意见反馈</string>
	<string name="message_image_desc">Message Image</string>
	<string name="title_activity_setting">SettingActivity</string>
	<string name="text_setting_update">检查更新</string>
	<string name="text_setting_remove_photo">清除缓存</string>
	<string name="text_setting_wifi">非wifi下图片质量</string>
	<string name="text_setting_location_a">启动时是否重新定位到当前位置</string>
	<string name="text_setting_location_b">关闭定位以后，打开应用会默认使用上一次位置</string>
	<string name="text_setting_location_c">打开定位以后，打开应用会自动定位到当前位置</string>
	<string name="text_setting_push">推送通知</string>
	<string name="text_setting_chat">聊天设置</string>
	<string name="text_facebook_phone">手机号：</string>
	<string name="text_setttings_now_version">当前版本V</string>
	<string name="text_cache_size">0M</string>
	<string name="text_photo_quality">普通</string>
	<string name="title_activity_register">RegisterActivity</string>
	<string name="text_regiser">注册新用户</string>
	<string name="text_regiser_phone">请输入注册手机号</string>
	<string name="text_regiser_password">请输入密码</string>
	<string name="text_regiser_code">请输入验证码</string>
	<string name="btn_register">同意服务条款并注册</string>
	<string name="text_regiser_getcode">获取验证码</string>
	<string name="text_register_agreement_b">夜夜通《使用协议》</string>
	<string name="text_register_agreement_a">点击【立即注册】，即表示您同意</string>
	<string name="notice">提示</string>
	<string name="cancle">取消</string>
	<string name="confirm">确定</string>
	<string name="loading">正在加载&#8230;</string>
	<string name="actionbar_title_bus">公交便利</string>
	<string name="actionbar_title_tranfer_result">换乘方案</string>
	<string name="title_activity_message">MessageActivity</string>
	<string name="text_message_system">系统消息</string>
	<string name="text_message_recommended">夜夜通推荐</string>
	<string name="title_activity_message_listview">MessageListviewActivity</string>
	<string name="text_message_date">2015年10月24日11:03:49</string>
	<string name="text_meaasge_title">消息标题</string>
	<string name="text_meaasge_detail">详情</string>
	<string name="actionbar_title_push">消息通知</string>
	<string name="actionbar_title_detail">消息详情</string>
	<string name="actionbar_title_recommend">夜夜通推荐</string>
	<string name="title_activity_shop_detail">ShopDetailActivity</string>
	<string name="title_activity_web_view">WebViewActivity</string>
	<string name="text_nomessage">你还没有最新的消息</string>
	<string name="login_username_hint">请输入用户名&#8230;</string>
	<string name="login_password_hint">请输入密码&#8230;</string>
	<string name="login_email_hint">请在此输入密码&#8230;</string>
	<string name="login">登录</string>
	<string name="register">注册</string>
	<string name="register_txt1">还没有账号？</string>
	<string name="register_txt2">立即注册 ></string>
	<string name="login_account">账号 </string>
	<string name="login_pwd">密码 </string>
	<string name="login_email">确认密码 </string>
	<string name="message_search_hint">搜索&#8230;</string>
	<string name="main_tab_recent">会话</string>
	<string name="main_tab_contact">联系人</string>
	<string name="mian_tab_set">设置</string>
	<string name="xlistview_header_hint_normal">下拉刷新</string>
	<string name="xlistview_header_hint_ready">松开刷新数据</string>
	<string name="xlistview_header_hint_loading">正在加载&#8230;</string>
	<string name="xlistview_header_last_time">上次更新时间：</string>
	<string name="xlistview_footer_hint_normal">查看更多</string>
	<string name="xlistview_footer_hint_ready">松开载入更多</string>
	<string name="add_avator">头像</string>
	<string name="add_nick">昵称</string>
	<string name="add_name">个&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;人：</string>
	<string name="add_name_hint">请输入昵称&#8230;</string>
	<string name="add_hometown">故&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;乡：</string>
	<string name="add_address">所&#160;&#160;在&#160;&#160;地：</string>
	<string name="add_autograph">个人签名：</string>
	<string name="set_notify">接收新消息通知</string>
	<string name="set_myinfo">个人资料</string>
	<string name="set_blacklist">黑名单</string>
	<string name="set_voice">声音</string>
	<string name="set_vibrate">震动</string>
	<string name="tips">提示</string>
	<string name="logout">退出登陆</string>
	<string name="pop_photo">拍照</string>
	<string name="pop_choose">从手机相册选中</string>
	<string name="network_tips">当前网络不可用,请检查您的网络!</string>
	<string name="toast_error_password_null">密码不能为空</string>
	<string name="toast_error_username_null">用户名不能为空</string>
	<string name="toast_error_comfirm_password">输入的两次密码不一致</string>
	<string name="blacklist">黑名单</string>
	<string name="chat">发起会话</string>
	<string name="add_friend">添加好友</string>
	<string name="send_state">已读</string>
	<string name="longclick_speak">长按说话</string>
	<string name="picture">照片</string>
	<string name="camera">拍摄</string>
	<string name="location">位置</string>
	<string name="black_tips">已添加至黑名单，你将不再收到对方的消息!</string>
	<string name="username">用户名</string>
	<string name="search">搜索</string>
	<string name="new_friends">新朋友</string>
	<string name="near_people">附近的人</string>
	<string name="my_friend">我的好友</string>
	<string name="voice_up_tips">手指上滑,取消发送</string>
	<string name="voice_cancel_tips">松开手指，取消发送</string>
	<string name="voice_seconds_tips">还可以说%1$s秒</string>
	<string name="voice_short_tips">录音时间太短</string>
	<string name="title_activity_fagment01">Fagment01Activity</string>
	<string name="text_chat_setting">聊天设置</string>
	<string name="et_search_city">输入城市名或拼音</string>
	<string name="sapce">&#160;&#160;&#160;&#160;</string>
	<string name="title_activity_bus">BusActivity</string>
	<string name="text_location">您当前的位置</string>
	<string name="hide_startstation">请输入起始地点</string>
	<string name="hide_station">请输入终点</string>
	<string name="text_serach_location">查附近</string>
	<string name="text_serach_station">查站点</string>
	<string name="text_serach_route">查线路</string>
	<string name="title_activity_tranfer">TranferActivity</string>
	<string name="title_activity_coupon_detail">CouponDetailActivity</string>
	<string name="text_title_bar_coupon">优惠券详情</string>
	<string name="text_title_seller">商家详情</string>
	<string name="text_couponDetail_buy">立即抢购</string>
	<string name="text_coupon_exchange">随时退</string>
	<string name="tv_coupon_deal_sell">已售0</string>
	<string name="text_title_coupon">优惠券</string>
	<string name="text_detail_coupon_num">1张</string>
	<string name="text_detail_coupon_set">套餐</string>
	<string name="text_detail_coupon__set_scope">· 适用范围： 全场通用</string>
	<string name="text_detail_coupon__set_custom">· 店内部分菜品价格参考：</string>
	<string name="text_detail_coupon__set_coupon">· 全国门店根据区域价格不同意，请以店内菜单为准</string>
	<string name="text_detail_coupon_comment">评价</string>
	<string name="title_activity_personal_wallet">PersonalWalletActivity</string>
	<string name="actionbar_title_wallet">我的钱包</string>
	<string name="personal_wallet">账户余额</string>
	<string name="personal_wallet_recharge">充值</string>
	<string name="personal_wallet_withdraw">提现</string>
	<string name="personal_wallet_manage">支付管理</string>
	<string name="title_activity_pay">PayActivity</string>
	<string name="text_recharge_money">金额(元)</string>
	<string name="text_recharge_hint">请输入充值金额</string>
	<string name="text_noncommenrt">你还没有发表过评论</string>
	<string name="text_try">去下一单试试吧</string>
	<string name="text_see_see">随便逛一逛</string>
</resources>