<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#00000000"
    android:gravity="bottom"
    android:orientation="vertical"
    android:padding="5dip" >

    <Button
        android:id="@+id/open_complete"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/photo_gallery_normal"
        android:gravity="center_vertical|left"
        android:paddingLeft="10dip"
        android:text="@string/choose_title"
        android:textColor="@color/black_text"
        android:textSize="@dimen/c_text_size" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0.5dip"
        android:background="@color/divider" />

    <Button
        android:id="@+id/open_man"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/sex_man_selector"
        android:paddingBottom="10dip"
        android:paddingTop="10dip"
        android:text="@string/choose_man"
         android:textColor="@color/sub_color"
        android:textSize="16sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0.5dip"
        android:background="@color/divider" />

    <Button
        android:id="@+id/open_women"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/sex_wommen_selector"
        android:paddingBottom="10dip"
        android:paddingTop="10dip"
        android:text="@string/choose_women"
        android:textColor="@color/sub_color"
        android:textSize="16sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0.5dip"
        android:background="@color/divider" />

    <Button
        android:id="@+id/open_sercet"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/photo_camera_selector"
        android:paddingBottom="10dip"
        android:paddingTop="10dip"
        android:text="@string/choose_sercet"
        android:textColor="@color/sub_color"
        android:textSize="16sp" />

    <Button
        android:id="@+id/sex_cancel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dip"
        android:background="@drawable/photo_cancel_selector"
        android:paddingBottom="10dip"
        android:paddingTop="10dip"
        android:textColor="@color/sub_color"
        android:text="@string/tt_bar_ps_compelte"
        android:textSize="16sp" />

</LinearLayout>