<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="50dp"
    android:background="@color/title_color" >

    <TextView
        android:id="@+id/tv_ps_detail_cancel"
        style="@style/title_bar_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_marginLeft="16dp"
        android:text="@string/text_title_bar_cancel"
        android:textSize="@dimen/c_text_size" />

    <TextView
        style="@style/title_bar_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_centerVertical="true"
        android:layout_marginLeft="16dp"
        android:text="@string/tt_bar_ps_detail"
        android:textSize="@dimen/c_text_size" />

    <TextView
        android:id="@+id/tv_ps_detail_complete"      
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_centerVertical="true"
        android:layout_marginRight="16dp"
        android:textColor="@color/not_click_white"
        android:text="@string/tt_bar_ps_compelte"
         android:enabled="false"
        android:textSize="@dimen/c_text_size" />

</RelativeLayout>