<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="50dp"
    android:background="@drawable/bg_login_actionbar" >

    <TextView
        android:id="@+id/textView1"
        style="@style/title_bar_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_centerVertical="true"
        android:text="@string/text_title_bar_login"
        android:textSize="@dimen/c_text_size" />

    <TextView
        android:id="@+id/tv_login_register"
        style="@style/title_bar_text"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_alignParentRight="true"
        android:layout_centerVertical="true"
        android:background="@drawable/actionbar_selector"
        android:clickable="true"
        android:gravity="center"
        android:text="@string/text_title_bar_register"
        android:textSize="@dimen/c_text_size" />

    <TextView
        android:id="@+id/tv_login_cancel"
        style="@style/title_bar_text"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:background="@drawable/actionbar_selector"
        android:clickable="true"
        android:gravity="center"
        android:text="@string/text_title_bar_cancel"
        android:textSize="@dimen/c_text_size" />

</RelativeLayout>