<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/ic_about_bg"
    android:fitsSystemWindows="true" >

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="@color/about_white" >

        <ImageView
            android:id="@+id/iv_about_logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="80dp"
            android:contentDescription="@null"
            android:src="@drawable/ic_about_logo" />

        <TextView
            android:id="@+id/tv_about_version"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/iv_about_logo"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="120dp"
            android:text="@string/text_about_version"
            android:textColor="@color/tab_title_normal_color"
            android:textSize="@dimen/a_text_size" />

        <TextView
            android:id="@+id/tv_about_"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_about_version"
            android:layout_centerHorizontal="true"
            android:text="@string/text_about_agreement"
            android:textColor="@color/black_text"
            android:textSize="@dimen/c_text_size" />

        <TextView
            android:id="@+id/tv_about_copyright2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="10dip"
            android:layout_centerHorizontal="true"
            android:text="@string/text_about_copyrightb"
            android:textColor="@color/tab_title_normal_color"
            android:textSize="@dimen/a_text_size" />

        <TextView
            android:id="@+id/tv_about_copyright1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@id/tv_about_copyright2"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="5dp"
            android:text="@string/text_about_copyrighta"
            android:textColor="@color/tab_title_normal_color"
            android:textSize="@dimen/a_text_size" />
    </RelativeLayout>

</LinearLayout>