<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent"
	android:background="@color/bg"
	android:orientation="vertical" >

	<View
		android:layout_width="fill_parent"
		android:layout_height="0.5px"
		android:layout_marginTop="6dp"
		android:background="@color/divider" />

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:background="@drawable/bg"
		android:orientation="horizontal"
		android:padding="8dp" >

		<TextView
			android:layout_width="wrap_content"
			android:layout_height="30dp"
			android:gravity="center_vertical"
			android:text="@string/text_recharge_money"
			android:textColor="@color/black_text"
			android:textSize="@dimen/c_text_size" />

		<com.nightfair.mobille.view.ClearEditText
			android:id="@+id/cet_money"
			android:layout_width="match_parent"
			android:layout_height="30dp"
			android:layout_marginLeft="20dp"
			android:layout_marginRight="20dp"
			android:background="@null"
			android:hint="@string/text_recharge_hint"
			android:inputType="numberDecimal"
			android:maxLength="8"
			android:singleLine="true"
			android:textColor="@color/black_text"
			android:textColorHint="@color/tab_title_normal_color"
			android:textSize="@dimen/a_text_size" >
		</com.nightfair.mobille.view.ClearEditText>
	</LinearLayout>

	<TextView
		android:id="@+id/tv_wallet_ok"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginLeft="16dp"
		android:layout_marginRight="16dp"
		android:layout_marginTop="25dp"
		android:background="@drawable/button_serach_bg_subred"
		android:clickable="true"
		android:enabled="false"
		android:gravity="center"
		android:paddingBottom="15dp"
		android:paddingTop="15dp"
		android:text="@string/confirm"
		android:textColor="@color/about_white"
		android:textSize="@dimen/a_text_size" />

</LinearLayout>