<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fitsSystemWindows="true"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:orientation="vertical" >

        <View
            android:layout_width="fill_parent"
            android:layout_height="1px"
            android:background="@color/divider" />

        <RelativeLayout
            android:id="@+id/rl_setting_update"
            style="@style/personal_item_layout" >

            <TextView
                style="@style/personal_item_text"
                android:text="@string/text_setting_update" />

            <TextView
                style="@style/setting_item_right"
                android:text="v5.0" />
        </RelativeLayout>
    </LinearLayout>

    <View
        android:layout_width="fill_parent"
        android:layout_height="1px"
        android:background="@color/divider" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="8dp"
        android:orientation="vertical" >

        <View
            android:layout_width="fill_parent"
            android:layout_height="1px"
            android:background="@color/divider" />

        <RelativeLayout
            android:id="@+id/rl_setting_remove_photo"
            style="@style/personal_item_layout" >

            <TextView
                style="@style/personal_item_text"
                android:text="@string/text_setting_remove_photo" />
        </RelativeLayout>

        <View
            android:layout_width="fill_parent"
            android:layout_height="1px"
            android:background="@color/divider" />

        <RelativeLayout
            android:id="@+id/rl_setting_wifi_photo"
            style="@style/personal_item_layout" >

            <TextView
                style="@style/personal_item_text"
                android:text="@string/text_setting_wifi" />
        </RelativeLayout>

        <View
            android:layout_width="fill_parent"
            android:layout_height="1px"
            android:background="@color/divider" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:orientation="vertical" >

        <View
            android:layout_width="fill_parent"
            android:layout_height="1px"
            android:background="@color/divider" />

        <LinearLayout
            android:id="@+id/rl_setting_location"
            style="@style/personal_item_layout"
            android:padding="5dp" >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:text="@string/text_setting_location_a"
                android:textSize="@dimen/c_text_size" />
        </LinearLayout>

        <View
            android:layout_width="fill_parent"
            android:layout_height="1px"
            android:background="@color/divider" />

        <RelativeLayout
            android:id="@+id/rl_setting_push"
            style="@style/personal_item_layout"
            android:layout_height="60dp" >

            <TextView
                style="@style/personal_item_text"
                android:text="@string/text_setting_push" />
        </RelativeLayout>

        <View
            android:layout_width="fill_parent"
            android:layout_height="1px"
            android:background="@color/divider" />
    </LinearLayout>

</LinearLayout>