<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="match_parent"
    android:background="#00000000"
    android:orientation="vertical"
    android:padding="5dip" >

    <Button
        android:id="@+id/open_complete"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/photo_gallery_normal"
        android:gravity="center"
        android:padding="18dp"
        android:text="@string/dialog_edit_title"
        android:textColor="@color/black_text"
        android:textSize="@dimen/a_text_size" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="1dip"
        android:background="@color/divider" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/photo_cancel_selector" >

        <Button
            android:id="@+id/dialog_cancal_cancel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/autograph_cancal_selector"
            android:paddingBottom="13dip"
            android:paddingTop="13dip"
            android:text="@string/dialog_edit_cancal"
            android:textColor="@color/sub_color"
            android:textSize="16sp" />

        <TextView
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:layout_marginBottom="6dp"
            android:layout_marginTop="6dp"
            android:background="@color/divider" />

        <Button
            android:id="@+id/dialog_cancal_ok"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/autograph_ok_selector"
            android:paddingBottom="13dp"
            android:paddingTop="13dp"
            android:text="@string/dialog_edit_ok"
            android:textColor="@color/sub_color"
            android:textSize="16sp" />
    </LinearLayout>

</LinearLayout>